--- a/package.json
+++ b/package.json
@@ -1,4 +1,15 @@
 {
-    "name": "@mindarelus/tiny",
-    "version": "1.0.0"
+  "name": "@mindarelus/tiny",
+  "version": "1.1.0",
+  "description": "Removes all spaces from a string",
+  "license": "MIT",
+  "repository": "mindarelus/tiny",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "keywords": [
+    "events",
+    "npm",
+    "package",
+    "mindarelus"
+  ]
 }
