--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@mindarelus/tiny",
-  "version": "1.1.0",
-  "description": "Removes all spaces from a string",
+  "version": "1.1.1",
+  "description": "Events Dispatcher",
   "license": "MIT",
   "repository": "mindarelus/tiny",
   "main": "dist/index.js",
